src/snapshots/msh_parser__parser__tests__msh2_binary_header.snap
---
source: src/parser.rs
expression: "parse_header(&std::fs::read_to_string(&path).unwrap()).unwrap().1"
---
MshHeader {
    version: V22,
    storage: BinaryLe,
    size_t: EightBytes,
}
