src/snapshots/msh_parser__parser__tests__msh4_ascii_header.snap
---
source: src/parser.rs
expression: "parse_header(&std::fs::read_to_string(&path).unwrap()).unwrap().1"
---
MshHeader {
    version: V41,
    storage: Ascii,
    size_t: EightBytes,
}
