src/snapshots/msh_parser__parser__tests__msh4_binary_header.snap
---
source: src/parser.rs
expression: check_header(&path).unwrap()
---
MshHeader {
    version: V41,
    storage: BinaryLe,
    size_t: EightBytes,
}
