src/snapshots/msh_parser__parser__tests__unix_line_endings.snap
---
source: src/parser.rs
expression: "parse_header(&std::fs::read_to_string(&path).unwrap()).unwrap().1"
---
MshHeader {
    version: V22,
    storage: Ascii,
    size_t: EightBytes,
}
